--- a/html/index.html
+++ b/html/index.html
@@ -13,11 +13,11 @@
             <p id="firstname">None</p>
             <p id="lastname">None</p>
             <p id="phone_number">None</p>
-            <h3>Why are you joining our company?</h3>
+            <h3>Why are you interested joining our company?</h3>
             <div id="textareas">
                 <textarea rows="4" cols="50" class="textarea" id="textarea_wayjoc"></textarea>
             </div>
-            <h3>Tell us about yourself</h3>
+            <h3>Tell us why we should pick you over someone else?</h3>
             <div id="textareas">
                 <textarea rows="4" cols="50" class="textarea" id="textarea_tuaby"></textarea>
             </div>
